Adjusted spacing on header DRY'd up project list controller methods (index and show_all) Added styling to project list display Fixed bug with #body container that caused scrollbars on long pages

--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,25 @@ a, a:link, a:active { color: #2E98C4; text-decoration: none; border-bottom: 1px 
 #wrapper { width: 960px; background: #FFF; padding: 20px; margin: 0 auto;}
 
 #header ul#nav {clear: both;}
-#header ul#nav li { float: left;  width: 100px;  text-align: left;}
-#header ul#nav li a { text-decoration: none; border: none; font-weight: bold; color: #3A4145;}
-#header ul#nav li.small { text-align: right; width: 70px;}
+#header ul#nav li { float: left; margin-right: 2em; text-align: left;}
+#header ul#nav li a { font-size: 12px; text-decoration: none; border: none; font-weight: bold; color: #3A4145;}
+#header ul#nav li.small { margin-right: 0; text-align: right; width: 70px;}
 #header ul#nav li.small a { font-size: 12px; color: #2E98C4;}
 #header #quicksearch { float: right;}
-#body { height: 400px; overflow: auto; margin-top: 1em;}
+#body { margin-top: 1em; padding-bottom: 35px;}
 
-h2 { font-size: 1.8em; border-bottom: 1px dotted #4A5357; color: #4A5357; margin-bottom: 1em;}
+h2 { font-size: 1.8em; border-bottom: 1px dotted #4A5357; color: #4A5357; margin-bottom: 0.5em;}
 
 td, th { padding-left: 1.5em; padding-right: 1.5em; }
 
 table.invoice_list tr.unpaid { background-color: red; color: white; }
 table.invoice_list tr.total_row td { border-top: 1px dashed black; font-weight: bold; }
+
+ul.submenu li a { display: block;}
+
+#project-list { margin-top: 1em;}
+#project-list li { line-height: 2em; background: #CDDEE0;}
+#project-list li .name { font-size: 11px; font-weight: bold; margin-left: 1em; width: 800px; display: inline-block;}
+#project-list li .task-count { width: 100px; font-size: 10px; margin-right: 1em; display: inline-block;}
+#project-list li .task-count strong { font-weight: bold;}
+#project-list li a { border: none; color: #333;}
